# options-tradebot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: defined_risk_short_vol.toml
data/reference/: b3_options_liquidity_snapshot_2025_2026.csv  mt5_option_symbols.template.csv
docs/architecture/: defined_risk_short_vol_implementation_plan.md  system_design.md
docs/research/: b3_market_research.md  video_strategy_adaptation.md
scripts/: collect_mt5_options_data.py  probe_mt5.py  run_backtest.py  run_live_market_scan.py  run_option_research.py  run_paper_trade.py  start_short_vol_session.ps1
src/options_tradebot/: __init__.py
src/options_tradebot/brokers/: __init__.py  mt5_execution.py
src/options_tradebot/cli/: main.py
src/options_tradebot/config/: __init__.py  loader.py  schema.py  settings.py
src/options_tradebot/connectors/: __init__.py  ib.py
src/options_tradebot/data/: __init__.py  brapi_client.py  models.py  mt5_client.py
src/options_tradebot/execution/: __init__.py  ib_adapter.py  mt5_adapter.py  order_router.py  paper.py  service.py  sim_adapter.py
src/options_tradebot/market/: __init__.py  models.py  pricing.py  surface.py
src/options_tradebot/market_data/: __init__.py  collector.py
src/options_tradebot/risk/: sizing.py  (+1 more)
tests/: __init__.py  test_backtest.py  test_cross_market_scanner.py  test_defined_risk_runtime.py  test_ib_connector.py  test_paper.py  test_polling.py  test_pricing.py  test_service.py  test_short_vol_config.py  test_sizing.py  test_strategy.py  test_surface.py
tests/fixtures/: sample_option_snapshots.csv
(+25 files in other folders)
