[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-tradebot"
version = "0.1.0"
description = "Options tradebot for the Brazilian market with B3-focused research, pricing, and MT5 paper trading."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "ib_async>=2.1.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "MetaTrader5>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
options-tradebot = "options_tradebot.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
